--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
         "--init-hook",
         "import sys; sys.path.extend([\"\"/Users/marco/.vscode/extensions/ms-python.devicesimulatorexpress-2020.0.36321/out\"\",\"\"/Users/marco/.vscode/extensions/ms-python.devicesimulatorexpress-2020.0.36321/out/micropython\"\",\"\"/Users/marco/.vscode/extensions/ms-python.devicesimulatorexpress-2020.0.36321/out/clue\"\",\"\"/Users/marco/.vscode/extensions/ms-python.devicesimulatorexpress-2020.0.36321/out/base_circuitpython\"\"])"
     ],
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
